@@ -1,6 +1,12 @@
 
 2003-06-23	Joel Becker <joel.becker@oracle.com>
 
+	* kernel/osm.c: 64bit typos.
+	* libosm/Makefile: Build PIC, dummy.
+	* redhat/osm-2.4.9-e.spec.in: Add osm-lib package details
+
+2003-06-23	Joel Becker <joel.becker@oracle.com>
+
 	* configure.in: Added Red Hat AS2.1 specfile to AC_OUTPUT.
 	* include/Makefile: Remove references to asm* directories.
 	* include/asm-i386/*: Removed
